--- a/src/app/pages/terminal/terminal.component.scss
+++ b/src/app/pages/terminal/terminal.component.scss
@@ -1,6 +1,7 @@
 .main_container {
-  background-color: black;
-  color: green;
+  background-color: rgb(1, 2, 8);
+  color: #B0BEC5;
+  font-weight: bold;
   width: 100vw;
   height: 100vh;
   font-family: "Courier New", Courier, monospace;
@@ -49,11 +50,11 @@
   animation: shake 0.5s ease;
 }
 .terminal_small {
-  background: #000911;
+  background: #0A0F29;
   height: 70%;
   width: 60%;
   border-radius: 0.5rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   gap: 0.5rem;
   display: flex;
   flex-direction: column;
@@ -70,7 +71,7 @@
     height: 100%;
     width: 100%;
     border-radius: 0rem;
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   &.minimizing {
     transform: translateY(100vh);
@@ -82,7 +83,7 @@
   }
 
   .header {
-    background-color: rgba(2, 14, 31, 0.616);
+    background-color: #020e1f9d;
     height: 8%;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
@@ -91,7 +92,7 @@
     justify-content: space-between;
 
     .name {
-      background: #000911;
+      background: #0A0F29;
       height: 80%;
       align-self: flex-end;
       padding: 0 1rem;
